# analisador-de-planilhas-inteligente

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
analysis/: detector.py  indicator.py  semantic.py  stopwords.py
config/: settings.py
core/: exceptions.py  id_generator.py  loader.py  logging_config.py  utils.py
gui/: app.py  main_gui.py
reports/: reporter.py
tests/: __init__.py  conftest.py  test_indicator.py  test_loader.py  test_stopwords.py  test_utils.py
